--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "GITHUB-SEARCH": {
+    "git-search": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/GITHUB-SEARCH",
+            "outputPath": "dist/git-search",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -62,18 +62,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "GITHUB-SEARCH:build"
+            "browserTarget": "git-search:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "GITHUB-SEARCH:build:production"
+              "browserTarget": "git-search:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "GITHUB-SEARCH:build"
+            "browserTarget": "git-search:build"
           }
         },
         "test": {
@@ -110,19 +110,19 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "GITHUB-SEARCH:serve"
+            "devServerTarget": "git-search:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "GITHUB-SEARCH:serve:production"
+              "devServerTarget": "git-search:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "GITHUB-SEARCH",
+  "defaultProject": "git-search",
   "cli": {
-    "analytics": "a0499553-6c72-4178-91e3-fe6954c21f9d"
+    "analytics": "7c38a4e5-6ef0-43c5-a70f-1ff78bdcd1ed"
   }
 }
